# ComfyUI-F5-TTS

./: .gitignore  F5TTS.py  Install.py  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: problem-report.md
.github/workflows/: publish.yml
example_workflows/: F5TTS-test-all.json  F5TTS_test_en_1_ref_short.deep.txt  F5TTS_whisper_workflow.json  SpeakLikeALocal.json  fr_example.txt  jp_example.txt  simple_ComfyUI_F5TTS_workflow.json
examples/: F5TTS-test-all.json  F5TTS_test_zh_1_ref_short.txt
