[project]
name = "ComfyUI-F5-TTS"
description = "Text to speech with F5-TTS"
version = "1.0.0"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/niknah/ComfyUI-F5-TTS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "niknah"
DisplayName = "COmfyUI-F5-TTS"
Icon = ""
